importtime_islamic_times.txt
import time: self [us] | cumulative | imported package
import time:        65 |         65 | winreg
import time:       140 |        140 |   _io
import time:        20 |         20 |   marshal
import time:       141 |        141 |   nt
import time:       420 |        720 | _frozen_importlib_external
import time:       288 |        288 |   time
import time:       161 |        448 | zipimport
import time:        40 |         40 |     _codecs
import time:       433 |        473 |   codecs
import time:       840 |        840 |   encodings.aliases
import time:      1143 |       2456 | encodings
import time:       445 |        445 | encodings.utf_8
import time:       465 |        465 | encodings.cp1252
import time:        36 |         36 | _signal
import time:        21 |         21 |     _abc
import time:       115 |        135 |   abc
import time:        93 |        228 | io
import time:        38 |         38 |       _stat
import time:        58 |         95 |     stat
import time:       561 |        561 |     _collections_abc
import time:        49 |         49 |       genericpath
import time:        62 |         62 |       _winapi
import time:       141 |        251 |     ntpath
import time:       288 |       1194 |   os
import time:       160 |        160 |   _sitebuiltins
import time:       371 |        371 |   encodings.utf_8_sig
import time:       698 |        698 |   _distutils_hack
import time:       222 |        222 |   sitecustomize
import time:      1403 |       4046 | site
import time:        87 |         87 |       itertools
import time:       326 |        326 |       keyword
import time:        51 |         51 |         _operator
import time:       407 |        458 |       operator
import time:       387 |        387 |       reprlib
import time:        48 |         48 |       _collections
import time:       789 |       2094 |     collections
import time:        17 |       2110 |   collections.abc
import time:       376 |        376 |   linecache
import time:        46 |         46 |           _functools
import time:       684 |        730 |         functools
import time:       456 |        456 |         types
import time:      1202 |       2387 |       enum
import time:        52 |         52 |         _sre
import time:       352 |        352 |           re._constants
import time:       433 |        785 |         re._parser
import time:       265 |        265 |         re._casefix
import time:       493 |       1594 |       re._compiler
import time:       339 |        339 |       copyreg
import time:       592 |       4910 |     re
import time:       789 |       5699 |   textwrap
import time:       578 |        578 |   warnings
import time:       670 |        670 |   contextlib
import time:       344 |        344 |     __future__
import time:       381 |        725 |   _colorize
import time:       905 |      11060 | traceback
  File "<string>", line 1
    "import
    ^
SyntaxError: unterminated string literal (detected at line 1)
